[package]
name = "libruffle"
version = "0.1.0"
edition = "2024"

[lib]
name = "ruffle"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
ndk = { version = "0.9.0", features = ["audio"] }
ndk-sys = "0.6.0"

ruffle_core ={ git = "https://github.com/ruffle-rs/ruffle", branch = "master", features = [
    "audio",
    "symphonia",
    "mp3",
    "nellymoser",
    "lzma",
    "default_compatibility_rules",
    "default_font",
] }
ruffle_video_software = { git = "https://github.com/ruffle-rs/ruffle", branch = "master" }
ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle", branch = "master" }
lazy_static = "1.5.0"
log = "0.4.27"
once_cell = "1.21.3"
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
